--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@sparticuz/chromium": "^141.0.0",
     "moment-timezone": "^0.5.45",
     "openai": "^4.78.1",
     "puppeteer": "^23.11.1",
+    "puppeteer-core": "^24.29.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.34.1"
   }
