--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
+  "name": "chatbot-whatsapp",
+  "version": "1.0.0",
+  "description": "Chatbot WhatsApp da Aetronics",
+  "main": "chatbot.js",
+  "scripts": {
+    "start": "node chatbot.js"
+  },
   "dependencies": {
     "@sparticuz/chromium": "^141.0.0",
     "moment-timezone": "^0.5.45",
     "openai": "^4.78.1",
-    "puppeteer": "^23.11.1",
     "puppeteer-core": "^24.29.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.34.1"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
