--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@sparticuz/chromium": "^141.0.0",
+    "express": "^4.21.2",
     "moment-timezone": "^0.5.45",
     "openai": "^4.78.1",
     "puppeteer-core": "^24.29.1",
