--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "chatbot-whatsapp",
+  "name": "whatsapp-bot-aetronics",
   "version": "1.0.0",
-  "description": "Chatbot WhatsApp da Aetronics",
+  "description": "Bot de WhatsApp para Aetronics rodando no Render",
   "main": "chatbot.js",
   "scripts": {
     "start": "node chatbot.js"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^141.0.0",
-    "express": "^4.21.2",
-    "moment-timezone": "^0.5.45",
-    "openai": "^4.78.1",
-    "puppeteer-core": "^24.29.1",
+    "@sparticuz/chromium": "^1.0.0",
+    "express": "^4.18.2",
+    "puppeteer-core": "^20.7.2",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.34.1"
+    "whatsapp-web.js": "^1.21.1"
   },
   "engines": {
-    "node": ">=18.x"
+    "node": "20.x"
   }
 }
