--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "chatbot-whatsapp",
   "version": "1.0.0",
-  "description": "🤖 Bot WhatsApp da Aetronics rodando no Render",
   "main": "chatbot.js",
   "scripts": {
     "start": "node chatbot.js"
   },
   "engines": {
-    "node": ">=20.x"
+    "node": ">=25.0.0"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^133.0.0",
-    "express": "^4.18.2",
-    "puppeteer-core": "^20.7.2",
+    "@sparticuz/chromium": "^128.0.0",
+    "express": "^4.21.1",
+    "puppeteer-core": "^23.6.1",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.25.0"
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#master"
   }
 }
