--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "express": "^4.21.1",
     "puppeteer-core": "^22.15.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#master"
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main"
   }
 }
