--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "chatbot-whatsapp",
   "version": "1.0.0",
   "main": "chatbot.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node chatbot.js"
   },
-  "engines": {
-    "node": ">=25.0.0"
-  },
   "dependencies": {
-    "@sparticuz/chromium": "^123.0.1",
-    "express": "^4.21.1",
-    "puppeteer-core": "^22.15.0",
+    "@sparticuz/chromium": "^129.0.0",
+    "express": "^4.19.2",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main"
+    "whatsapp-web.js": "^1.25.0"
+  },
+  "engines": {
+    "node": ">=20 <26"
   }
 }
